--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 0 * * *"  # every day at midnight
   workflow_dispatch:      # manual run support
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
